--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Peter Piao Programming Portfolio</title>
+        <title>Peter's programming portfolio</title>
     </head>
     <body>
 
