--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <title>Peter's programming portfolio</title>
     </head>
     <body>
-
+This is my programming portfolio for CSC106.
+        I will be posting all code I write into this porfolio. 
 
     </body>
 </html>
