--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Peter's programming portfolio</title>
     </head>
     <body>
-This is my programming portfolio for CSC106.
+This is my programming portfolio for CSC106.<br>
         I will be posting all code I write into this porfolio. 
 
     </body>
