--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Peter's programming portfolio</title>
     </head>
     <body>
+        <h1>Welcome</h1>
 This is my programming portfolio for CSC106.<br>
         I will be posting all code I write into this porfolio. 
 
