--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
         <meta charset="utf-8">
         <title>Peter's programming portfolio</title>
     </head>
+    <table>
+            <thead>
+                
+                    <th></th>
+                    <th></th>
+                    <th></th>
+          
+            </thead>
+    </table>
     <body>
     <img src=" https://lh4.googleusercontent.com/ajJNqik-6lXdtY4d1vUi0yOoKi1lgOAB40NwXP-q_A1RvY7LJ_oAoZ6Zhdjf6JxPymDiuYa5-VLVvZTgXTDpFNoi3i_skkM8IBJeHFoJCICKinmXyC9yzRTJg3BxHs7P1dPB73v7">
 
