--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <table>
             <thead>
                 
-                    <th><a href=" </th>
-                    <th></th>
-                    <th></th>
+                    <th><a href="https://piao1688.github.io/index.html"><img src="pasted image 0.png"></a> </th>
+                    <th><a href="https://piao1688.github.io/javascripts.html"><img src="pasted image 1.png"></a> </th>
+                    <th><a href="https://piao1688.github.io/home.html"><img src="pasted image 2.png"></a> </th>
           
             </thead>
     </table>
