--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 
                     <th><a href="https://piao1688.github.io/index.html"><img src="pasted image 0.png"></a> </th>
                     <th><a href="https://piao1688.github.io/javascripts.html"><img src="pasted image 1.png"></a> </th>
-                    <th><a href="https://piao1688.github.io/home.html"><img src="pasted image 2.png"></a> </th>
+                    <th><a href="https://piao1688.github.io/about.html"><img src="pasted image 2.png"></a> </th>
           
             </thead>
     </table>
