--- a/javascripts.html
+++ b/javascripts.html
@@ -6,7 +6,15 @@
     </head>
     <body>
    <img src=" https://lh4.googleusercontent.com/ajJNqik-6lXdtY4d1vUi0yOoKi1lgOAB40NwXP-q_A1RvY7LJ_oAoZ6Zhdjf6JxPymDiuYa5-VLVvZTgXTDpFNoi3i_skkM8IBJeHFoJCICKinmXyC9yzRTJg3BxHs7P1dPB73v7">
-
+<table>
+            <thead>
+                
+                    <th><a href="https://piao1688.github.io/index.html"><img src="pasted image 0.png"></a> </th>
+                    <th><a href="https://piao1688.github.io/javascripts.html"><img src="pasted image 1.png"></a> </th>
+                    <th><a href="https://piao1688.github.io/about.html"><img src="pasted image 2.png"></a> </th>
+          
+            </thead>
+    </table>
         <h1>Welcome</h1>
 This is my programming portfolio for CSC106.<br>
         I will be posting all code I write into this porfolio. 
