--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
         <h1>Welcome</h1>
 This is my programming portfolio for CSC106.<br>
         I will be posting all code I write into this porfolio. 
-
+        <a target="_blank" href="https:///www.uri.edu/">At URI</a>
     </body>
 </html>
