--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 This is my programming portfolio for CSC106.<br>
         I will be posting all code I write into this porfolio. 
         <br>
-        <a target="_blank" href="https:///www.uri.edu/">At URI</a>
+        <a target="_blank" href="https://www.uri.edu/">At URI</a>
         </br>
     </body>
 </html>
