--- a/javascripts.html
+++ b/javascripts.html
@@ -17,7 +17,7 @@
     </table>
         <h1>Welcome</h1>
 This is my programming portfolio for CSC106.<br>
-        I will be posting all code I write into this porfolio. 
+        I will be posting all javascript code I write into this porfolio. 
 
     </body>
 </html>
